--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "@mui/material": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "@testing-library/jest-dom": "latest",
+    "@testing-library/react": "latest",
+    "@testing-library/user-event": "latest",
+    "react-scripts": "latest",
+    "web-vitals": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
